# mcp-sample

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  servers-config.json
docs/: architecture.md  configuration.md  developer-guide.md  extending.md  getting-started.md  user-guide.md
docs/api/: client-api.md  mcp-protocol.md  server-api.md
docs/planner/: file-structure.md  tasks.md  technology-stack.md
src/client/: client.py
src/servers/weather/sse/: mcp-weather.py  user_db.py
src/servers/weather/stdio/: weather.py
src/servers/weather/streamable-http/: mcp-weather.py
