[project]
name = "mcp-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.59.0",
    "fastapi>=0.116.1",
    "google>=3.0.0",
    "google-genai>=1.27.0",
    "jsonschema>=4.25.0",
    "mcp>=1.12.2",
    "openai>=1.97.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "httpx>=0.28.1",
    "fastmcp>=2.10.6",
]
